# LinkMIDI

./: README.md
.github/workflows/: build-release.yml
Document/: 程序设计.txt
firmware_src/: .gitignore  CHANGELOG_PHASE2.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PROJECT_ARCHITECTURE.md  QUICK_START.md  README.md  USB_MIDI_HOST_GUIDE.md  USB_MIDI_HOST_IMPLEMENTATION.md  USB_MIDI_HOST_QUICK_REFERENCE.md  idf_component.yml  partitions_16mb_ota.csv  partitions_8mb.csv  temp_html.txt
firmware_src/components/common/: CMakeLists.txt
firmware_src/components/config_manager/: CMakeLists.txt
firmware_src/components/network_midi2/: CMakeLists.txt  README.md  idf_component.yml
firmware_src/components/network_midi2/include/: mdns_discovery.h  network_midi2.h  nm2_discovery.h  nm2_protocol.h  nm2_session.h  nm2_transport.h
firmware_src/components/network_midi2/src/: mdns_discovery.c  network_midi2.c  nm2_discovery.c  nm2_protocol.c  nm2_session.c  nm2_transport.c
firmware_src/docs/: API.md  ARCHITECTURE.md  ESP-IDF-SHELL.md  NM2_PROTOCOL_ANALYSIS.md  NM2_REFACTOR_PLAN.md  OPTIMIZATION_REMAINING.md  OPTIMIZATION_TODO.md
firmware_src/hello_world/: API_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md
firmware_src/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_core.c  app_core.h  idf_component.yml  main.c  wifi_manager.c  wifi_manager.h
midi2net_src/: CMakeLists.txt  platformio.ini
midi2net_src/src/: CMakeLists.txt  main.c
(+30 files in other folders)
